<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TextToSpeech</string>
    <string name="AppName">Text\nTo\nSpeech</string>
    <string name="SystemLanguage">System Language</string>
    <string name="DeLanguage">Your system language is english.</string>
    <string name="Button_confirm">Swipe right to confirm.</string>
    <string name="Button_SelectLanguage">Swipe left for language selection.</string>
    <string name="Accessibillity">Accessibility</string>
    <string name="AccessibillityQuestion">Do you want to enable accessibility?</string>
    <string name="Button_reject">Swipe left to disable.</string>
    <string name="IconSwipeLeft">Icon that symbolises to swipe left</string>
    <string name="IconSwipeRight">Icon that symbolises to swipe right</string>
    <string name="Guide_Settings">Settings</string>
    <string name="Guide_Header">Guide</string>
    <string name="Guide_Settings_Content">To get to the settings you can swipe left anytime.</string>
    <string name="CameraMode">Scan-Modus</string>
    <string name="GuideCameraContent">To scan texts you have to go to the Scan-Mode. To get there you can swipe right anytime.</string>
    <string name="GuideVoiceControll">Voice control</string>
    <string name="GuideVoiceControlContent">To control the app with your voice you have to keep your finger on the screen.</string>
    <string name="GuideBackwards">Back</string>
    <string name="GuideBackwardsContent">To go back you just have to click with two fingers</string>
    <string name="Settings">Settings</string>
    <string name="SettingsGeneral">General</string>
    <string name="SettingsGeneralContent">Which settings do you want to modify?</string>
    <string name="SettingsGeneralButtonDesign">Design</string>
    <string name="SettingsGeneralButtonAccessibility">Accessibility</string>
    <string name="SettingsGeneralButtonInformation">Information</string>
    <string name="SettingsAccessibility">Accessibility</string>
    <string name="SettingsAccessibilityContent">Which accessibility do you want to modify?</string>
    <string name="SettingsAccessibilityButtonHapticFeedback">Haptic Feedback</string>
    <string name="SettingsAccessibilityButtonAuditoryFeedback">Auditory Feedback</string>
    <string name="SettingsAccessibilityButtonLanguage">Language</string>
    <string name="SettingsInformationContent">Which information do you want to see?</string>
    <string name="SettingsInformation">Information</string>
    <string name="SettingsInformationButtonGuide">Guide</string>
    <string name="SettingsInformationButtonVersion">Version</string>
    <string name="SettingsLanguage">Language</string>
    <string name="SettingsLanguageContent">The current language ist english. Which language should be used?</string>
    <string name="SettingsLanguageDE">German</string>
    <string name="SettingsLanguageEN">English</string>
    <string name="SettingsLanguageFR">French</string>
    <string name="SettingsDesignContent">The current Design is the Bright Theme. Which design do you want to choose?</string>
    <string name="SettingsDesign">Design</string>
    <string name="SettingsDesignButtonBrightTheme">Bright Theme</string>
    <string name="SettingsDesignButtonDarkTheme">Dark Theme</string>
    <string name="SettingsDesignButtonContrastTheme">Contrast Theme</string>
    <string name="IconSwipeRightDescription">Icon that symbolises to swipe right.</string>
    <string name="IconStatusDescription">Graphic that symbolizes this is step 1 of 4 steps.</string>
    <string name="title_activity_guide_backwards">GuideBackwards</string>
    <string name="TextOutputHeader">Text output</string>
    <string name="OCR_String">No Text was recognised.Take another picture from a different perspective.</string>
    <string name="TextOutputRepeat">Tap the screen to hear the output again.</string>
    <string name="Selection">Selection</string>
    <string name="SelectionFrage">How do you want to select your picture?</string>
    <string name="Gallery">From gallery</string>
    <string name="Camera">Camera</string>
</resources>