<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColorBrigth"
    tools:context="com.texttospeech.texttospeech.SettingsInformation">

    <TextView
        android:id="@+id/tvEinstellungenA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/MainHeaderNormalLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/einstellungenLinie"
        android:layout_width="282dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEinstellungenA" />

    <TextView
        android:id="@+id/tvAllgemein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/SettingsInformation"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/SecondHeaderNormalLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/einstellungenLinie" />

    <TextView
        android:id="@+id/tvEinstellungenAFrage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/SettingsInformationContent"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/StandardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAllgemein" />

    <Button
        android:id="@+id/btGuide"
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="@dimen/ButtonHeight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:background="@color/BgColorButtonBright"
        android:onClick="startActivityGuide"
        android:text="@string/SettingsInformationButtonGuide"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/StandardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEinstellungenAFrage" />

    <Button
        android:id="@+id/btVersion"
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="@dimen/ButtonHeight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/BgColorButtonBright"
        android:onClick="onButtonVersionClick"
        android:text="@string/SettingsInformationButtonVersion"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/StandardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btGuide" />

</android.support.constraint.ConstraintLayout>
